src/Details.module.css
.tabTitles{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 40px;
    margin-top: 50px;
}

.tabTitles div div{
    background: #262626;
    font-size: 13px;
    font-weight: 300;
    border-radius: 10px;
    transition: background-color 0.5s, transform 0.5s;
    text-align: center;
    padding: 20px 0px;
}

.tabTitles div div h2{
    font-size: 30px;
    font-weight: 500;
    padding: 0;
    margin: 0;
}

.tabTitles div div:hover{
    background: #ff004f;
    transform: translateY(-10px);
}

.content{
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 50px;
    /* align-items: center; */
    height: 100vh;
    /* top: 0px;
    opacity: var(--progress); */
}

/* .container{
    height: 200vh;
    display: flex;
    flex-direction: column;
    
} */

.tabContents{
    width: 40%;
    align-self: center;
}

.tab{
    display: none;
}

.activeTab{
    display: block;
}

